# drake-display

./: .gitignore  .markdownlint.json  README.md  pyproject.toml  research-document-reqs.md  whodis-template.md  whodis.md
7-9-3/: pipeline-idea-v1.md
discussions/: discussions-intro-v0.2.md
other-science/: research-centripetal-centrifugal-forces.md  research-cosmology-mysteries.md  research-dna-limits-bioinformation.md
pipeline/: pipeline-idea-v2.md  pipeline-v1-assessment.md
project/: CODE OF CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  LICENSE-CONTENT  PROJECT CHARTER.md  SECURITY.md  TODO.md
project-building-files/: discussions-intro.md
project-building-files/models/: data-sources-catalog.md  entity-effects-matrix.md  entity.md  equations-core.md  equations-provisional.md  equations.md  factors.md
project-building-files/planning/: DECISIONS.md  plan-phase0-veil-prototype.md  roadmap-veil-project.md  spec-galactic-habitability-veil.md
project-building-files/research/: research-drake-equation.md  research-fermi-paradox.md  research-galactic-chemical-evolution.md  research-galactic-hazards-distribution.md  research-kardashev-scale.md  research-stellar-compendium.md  research-stellar-energy-and-life.md
project/meta-docs/: CHANGELOG.md  GOVERNANCE.md
project/schemas/: SCHEMAS.md  data-source-info-schema.md  data-store-schema.md  schema-field-definition.md  (+1 more)
pseudocode/: class_CompositeField.txt  class_SourceField.txt
src/: setup-python-project.md
tests/: test_composite_field.py  test_config_validation.py  test_source_field.py
(+8 files in other folders)
