[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fields"
version = "0.1.0"
description = "Composable scalar field library for weighted spatial influence."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/fields"]
